fix overflow of text on cards

--- a/src/app/dash/dash.component.scss
+++ b/src/app/dash/dash.component.scss
@@ -33,6 +33,7 @@
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap; /* Prevents wrapping of overflow text */
   width: 200px;
 }
 
@@ -41,6 +42,7 @@
   text-align: left;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap; /* Prevents wrapping of overflow text */
   width: 200px;
 }
 
